# cselab

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_CN.md  install.sh  pyproject.toml
assets/: fake-hero-demo.sh  fake-repl-demo.sh  render-banner.py
docs/: brand-guide.md  deployment.md  index.html  social-preview.html
docs/plans/: 2026-03-10-repl-mode-design.md
examples/: autotest.sh  submit.sh  watch-test.sh
skills/: AGENTS.md  GEMINI.md  cselab.md
src/cselab/: __main__.py  banner.py  cli.py  config.py  connection.py  mascot.py  repl.py  theme.py
tests/: test_cli.py  test_config.py  test_connection.py  test_mascot.py  test_repl.py
