[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cselab"
version = "0.2.3"
description = "Run UNSW CSE commands locally with fast sync and interactive support"
requires-python = ">=3.10"
license = "MIT"
keywords = ["unsw", "cse", "ssh", "autotest"]
authors = [{ name = "Steven Cai" }]
readme = "README.md"
dependencies = [
    "prompt-toolkit>=3.0",
    "tomli>=1.1; python_version < '3.11'",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Education",
]

[project.urls]
Repository = "https://github.com/Genius-Cai/cselab"
Homepage = "https://genius-cai.github.io/cselab/"
"Bug Tracker" = "https://github.com/Genius-Cai/cselab/issues"

[project.scripts]
cselab = "cselab.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cselab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
